--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,24 @@
-# EdgeCase Equalizer - Dependencies
-# Last updated: December 14, 2025
-
-# Web framework
-Flask==3.1.2
-Werkzeug==3.1.3
-Jinja2==3.1.6
-click==8.1.8
 blinker==1.9.0
-itsdangerous==2.2.0
-MarkupSafe==3.0.3
-
-# Production WSGI server
-waitress==3.0.2
-
-# Database (SQLCipher encryption)
-sqlcipher3-wheels==0.5.6
-
-# File encryption
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
 cryptography==46.0.3
-
-# PDF generation
-reportlab==4.4.5
-pypdf==5.1.0
-
-# Markdown export
-Markdown==3.9
-
-# AI integration (optional - for AI Scribe feature)
+diskcache==5.6.3
+Flask==3.1.2
+iniconfig==2.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
 llama_cpp_python==0.3.16
-huggingface_hub==1.1.7
-
-# System monitoring
-psutil==7.1.3
-
-# Testing
-pytest==8.4.2
+MarkupSafe==3.0.3
+numpy==2.4.0
+packaging==25.0
+pillow==12.0.0
+pluggy==1.6.0
+pycparser==2.23
+Pygments==2.19.2
+pypdf==6.5.0
+pytest==9.0.2
+reportlab==4.4.7
+sqlcipher3==0.5.4
+typing_extensions==4.15.0
+Werkzeug==3.1.4
